完善资料操作： 1.增加绑定的确认按钮的实现。 2.增加资料的抽取，如果没有绑定就不抽取，绑定了就抽取。 3.增加资料的更新功能。

--- a/medical_management_information_system/medical_management_information_system.csproj
+++ b/medical_management_information_system/medical_management_information_system.csproj
@@ -47,39 +47,48 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BindForm.cs">
+    <Compile Include="Form\BindForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="BindForm.Designer.cs">
+    <Compile Include="Form\BindForm.Designer.cs">
       <DependentUpon>BindForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="DButils.cs" />
-    <Compile Include="LoginForm.cs">
+    <Compile Include="LogicCode\DButils.cs" />
+    <Compile Include="Form\LoginForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="LoginForm.Designer.cs">
+    <Compile Include="Form\LoginForm.Designer.cs">
       <DependentUpon>LoginForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ConnectForm.cs">
+    <Compile Include="Form\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ConnectForm.Designer.cs">
+    <Compile Include="Form\MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="LogicCode\Program.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Form\ConnectForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form\ConnectForm.Designer.cs">
       <DependentUpon>ConnectForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="SiginForm.cs">
+    <Compile Include="Form\SiginForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="SiginForm.Designer.cs">
+    <Compile Include="Form\SiginForm.Designer.cs">
       <DependentUpon>SiginForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="User.cs" />
-    <EmbeddedResource Include="BindForm.resx">
+    <Compile Include="LogicCode\User.cs" />
+    <EmbeddedResource Include="Form\BindForm.resx">
       <DependentUpon>BindForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="LoginForm.resx">
+    <EmbeddedResource Include="Form\LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form\MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -90,10 +99,10 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="ConnectForm.resx">
+    <EmbeddedResource Include="Form\ConnectForm.resx">
       <DependentUpon>ConnectForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="SiginForm.resx">
+    <EmbeddedResource Include="Form\SiginForm.resx">
       <DependentUpon>SiginForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
@@ -108,6 +117,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="DerivedComponents\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
