0.固定了登录、注册、连接、绑定窗口的大小；√ 1.采购窗口功能：   1.采购订单：     1.浏览历史采购订单；×     2.打印表格；×   2.请购单：     1.查看未完成的采购订单；×     2.打印表格；×   3.经销商管理：     1.查看经销商信息；×     2.添加经销商信息；×     3.更新经销商信息；×     4.打印表格；×   4.采购规划：     1.选择最优的经销商组合进行采购；× 2.超市管理窗口功能：   1.药品管理：     1.查看药品库存；×     2.价格等信息；×     3.能自动生成采购单；×   3. 经销商管理：     1.查看经销商信息；×     2.打印表格；×   2.采购订单：     1.浏览历史采购订单；×     2.打印表格；×   3.请购单：     1.查看未完成的采购订单；×     2.打印表格；×   4.财务管理：     1.可以查看年、月、周、日的收入支出水平；×     2.可视化；×     3.打印表格；×   5.顾客统计：     1.统计客流；×     2.购买喜好等；×     3.打印表格；×   6.采购人员管理：     1.查看人员信息；×     2.修改删除等；×     3.打印表格；×   7.经办人管理：     1.查看人员信息；×     2.修改删除等；×     3.打印表格；× 3.经办人窗口功能：   1.购物窗口：     1.包括顾客信息录入；×     2.填入所需药品（有搜索功能）；×     3.生成购物单；×

--- a/medical_management_information_system/medical_management_information_system.csproj
+++ b/medical_management_information_system/medical_management_information_system.csproj
@@ -75,12 +75,6 @@
       <DependentUpon>SiginForm.cs</DependentUpon>
     </Compile>
     <Compile Include="InitPart\InitCode\User.cs" />
-    <Compile Include="ServicePart\ManagementPart\ManagementForm\ManagementForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ServicePart\ManagementPart\ManagementForm\ManagementForm.Designer.cs">
-      <DependentUpon>ManagementForm.cs</DependentUpon>
-    </Compile>
     <Compile Include="ServicePart\ServiceForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -108,9 +102,6 @@
     <EmbeddedResource Include="InitPart\InitForm\SiginForm.resx">
       <DependentUpon>SiginForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ServicePart\ManagementPart\ManagementForm\ManagementForm.resx">
-      <DependentUpon>ManagementForm.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="ServicePart\ServiceForm.resx">
       <DependentUpon>ServiceForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -129,11 +120,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="DerivedComponents\" />
-    <Folder Include="ServicePart\HandlePart\HandleCode\" />
-    <Folder Include="ServicePart\HandlePart\HandleForm\" />
-    <Folder Include="ServicePart\ManagementPart\ManagementCode\" />
-    <Folder Include="ServicePart\PurchasePart\PurchaseCode\" />
-    <Folder Include="ServicePart\PurchasePart\PurchaseForm\" />
+    <Folder Include="ServicePart\FunctionButton\" />
+    <Folder Include="ServicePart\TabPageModuleForm\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
