安排进度： 0.根据权限弹出窗口；√ 1.采购窗口功能：   1.采购订单：     1.浏览历史采购订单；×     2.打印表格；×   2.请购单：     1.查看未完成的采购订单；×     2.打印表格；×   3.经销商管理：     1.查看经销商信息；×     2.添加经销商信息；×     3.更新经销商信息；×     4.打印表格；×   4.采购规划：     1.选择最优的经销商组合进行采购；× 2.超市管理窗口功能：   1.药品管理：     1.查看药品库存；×     2.价格等信息；×     3.能自动生成采购单；×   2. 经销商管理：     1.查看经销商信息；×     2.添加经销商信息；×     3.更新经销商信息；×     4.打印表格；×   3.采购订单：     1.浏览历史采购订单；×     2.打印表格；×   4.请购单：     1.查看未完成的采购订单；×     2.打印表格；×   5.财务管理：     1.可以查看年、月、周、日的收入支出水平；×     2.可视化；×     3.打印表格；×   6.顾客统计：     1.统计客流；×     2.购买喜好等；×     3.打印表格；×   7.采购人员管理：     1.查看人员信息；×     2.修改删除等；×     3.打印表格；×   8.经办人管理：     1.查看人员信息；×     2.修改删除等；×     3.打印表格；× 3.经办人窗口功能：   1.购物窗口：     1.包括顾客信息录入；×     2.填入所需药品（有搜索功能）；×     3.生成购物单；×

--- a/medical_management_information_system/medical_management_information_system.csproj
+++ b/medical_management_information_system/medical_management_information_system.csproj
@@ -81,6 +81,18 @@
     <Compile Include="ServicePart\ServiceForm.Designer.cs">
       <DependentUpon>ServiceForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="ServicePart\TabPageModuleForm\PurchaseOrderForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ServicePart\TabPageModuleForm\PurchaseOrderForm.Designer.cs">
+      <DependentUpon>PurchaseOrderForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ServicePart\TabPageModuleForm\RequisitionForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ServicePart\TabPageModuleForm\RequisitionForm.Designer.cs">
+      <DependentUpon>RequisitionForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="InitPart\InitForm\BindForm.resx">
       <DependentUpon>BindForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -121,7 +133,6 @@
   <ItemGroup>
     <Folder Include="DerivedComponents\" />
     <Folder Include="ServicePart\FunctionButton\" />
-    <Folder Include="ServicePart\TabPageModuleForm\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
