安排进度： 0.根据权限弹出窗口；√ 1.采购窗口功能：   1.采购订单：     1.浏览历史采购订单；50%     2.打印表格；×
  2.请购单：
    1.查看未完成的采购订单；×
    2.打印表格；×
  3.经销商管理：
    1.查看经销商信息；×
    2.添加经销商信息；×
    3.更新经销商信息；×
    4.打印表格；×
2.超市管理窗口功能：
  1.药品管理：
    1.查看药品；×
    2.添加药品信息；×
    3.采购；×
  2.采购订单：
    1.浏览历史采购订单；×
    2.打印表格；×
  3.请购单：
    1.查看未完成的采购订单；×
    2.打印表格；×
  4.财务管理：
    1.可以查看年、月、周、日的收入支出水平；×
    2.可视化；×
    3.打印表格；×
  5.顾客统计：
    1.统计客流；×
    2.购买喜好等；×
    3.打印表格；×
  6.采购人员管理：
    1.查看人员信息；×
    2.修改删除等；×
    3.打印表格；×
  7.经办人管理：
    1.查看人员信息；×
    2.修改删除等；×
    3.打印表格；×
3.经办人窗口功能：
  1.购物窗口：
    1.包括顾客信息录入；×
    2.填入所需药品（有搜索功能）；×
    3.生成购物单；×

添加新药品->▶编辑药品->打印成excel->添加经销商->编辑经销商->采购->请购单->完成采购->查看历史采购单...

--- a/medical_management_information_system/medical_management_information_system.csproj
+++ b/medical_management_information_system/medical_management_information_system.csproj
@@ -75,6 +75,12 @@
       <DependentUpon>SiginForm.cs</DependentUpon>
     </Compile>
     <Compile Include="InitPart\InitCode\User.cs" />
+    <Compile Include="ServicePart\OtherForm\AddDrugForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ServicePart\OtherForm\AddDrugForm.Designer.cs">
+      <DependentUpon>AddDrugForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="ServicePart\ServiceForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -126,6 +132,9 @@
     <EmbeddedResource Include="InitPart\InitForm\SiginForm.resx">
       <DependentUpon>SiginForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ServicePart\OtherForm\AddDrugForm.resx">
+      <DependentUpon>AddDrugForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ServicePart\ServiceForm.resx">
       <DependentUpon>ServiceForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -156,7 +165,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="DerivedComponents\" />
-    <Folder Include="ServicePart\OtherForm\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
