--- a/medical_management_information_system/medical_management_information_system.csproj
+++ b/medical_management_information_system/medical_management_information_system.csproj
@@ -141,6 +141,18 @@
     <Compile Include="ServicePart\TabPageModuleForm\Requisition\SelectPharmaceutical.Designer.cs">
       <DependentUpon>SelectPharmaceutical.cs</DependentUpon>
     </Compile>
+    <Compile Include="ServicePart\TabPageModuleForm\Shopping\AddShoppingForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ServicePart\TabPageModuleForm\Shopping\AddShoppingForm.Designer.cs">
+      <DependentUpon>AddShoppingForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ServicePart\TabPageModuleForm\Shopping\ShoppingForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ServicePart\TabPageModuleForm\Shopping\ShoppingForm.Designer.cs">
+      <DependentUpon>ShoppingForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="ServicePart\utils\ExcelReport.cs" />
     <EmbeddedResource Include="InitPart\InitForm\BindForm.resx">
       <DependentUpon>BindForm.cs</DependentUpon>
@@ -195,6 +207,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ServicePart\TabPageModuleForm\Requisition\SelectPharmaceutical.resx">
       <DependentUpon>SelectPharmaceutical.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ServicePart\TabPageModuleForm\Shopping\AddShoppingForm.resx">
+      <DependentUpon>AddShoppingForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ServicePart\TabPageModuleForm\Shopping\ShoppingForm.resx">
+      <DependentUpon>ShoppingForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
