--- a/medical_management_information_system/medical_management_information_system.csproj
+++ b/medical_management_information_system/medical_management_information_system.csproj
@@ -141,6 +141,12 @@
     <Compile Include="ServicePart\TabPageModuleForm\Requisition\SelectPharmaceutical.Designer.cs">
       <DependentUpon>SelectPharmaceutical.cs</DependentUpon>
     </Compile>
+    <Compile Include="ServicePart\TabPageModuleForm\ShoppingCheck\ShoppingCheckForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ServicePart\TabPageModuleForm\ShoppingCheck\ShoppingCheckForm.Designer.cs">
+      <DependentUpon>ShoppingCheckForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="ServicePart\TabPageModuleForm\Shopping\AddShoppingForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -207,6 +213,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ServicePart\TabPageModuleForm\Requisition\SelectPharmaceutical.resx">
       <DependentUpon>SelectPharmaceutical.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ServicePart\TabPageModuleForm\ShoppingCheck\ShoppingCheckForm.resx">
+      <DependentUpon>ShoppingCheckForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ServicePart\TabPageModuleForm\Shopping\AddShoppingForm.resx">
       <DependentUpon>AddShoppingForm.cs</DependentUpon>
